--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/AddComment.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/AddComment.cshtml
@@ -18,7 +18,7 @@
                         <div class="card">
 
                             <div class="header">
-                                <h2 class="title">Feedback on Universities</h2>
+                                <h2 class="title">Add Feedback</h2>
                                 <p class="category">choose type comment to view feedback</p>
                                 <br />
 
