--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Mark/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Mark/Index.cshtml
@@ -15,7 +15,7 @@
 
                         <div class="header">
 
-                            <h2>Add differ Marks</h2>
+                            <h2>Add Marks</h2>
                             <br>
                             <ul class="nav nav-pills" role="tablist">
                                 <li class="nav-item">
@@ -156,7 +156,7 @@
                                         </form>
                                     </div>
                                     <div class="row max-w-full">
-                                        <p>View all my your Mark Teacher</p>
+                                        <p>View all my your Mark Course</p>
                                         <table class="table table-hover table-responsive">
                                             <thead>
                                                 <tr>
@@ -242,7 +242,7 @@
                                     </div>
 
                                     <div class="row max-w-full">
-                                        <p>View all my your Mark Teacher</p>
+                                        <p>View all my your Mark Course Teacher</p>
                                         <table class="table table-hover table-responsive">
                                             <thead>
                                                 <tr>
