--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -4,30 +4,34 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Associate your @Model.LoginProvider account.</h4>
-<hr />
-
-<p class="text-info">
-    You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
-</p>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div id="course" class="offset">
+    <div class="col-12 narrow text-center">
+        <h1 style="margin-top: 200px">@ViewData["Title"]</h1>
+        <h4>Associate your @Model.LoginProvider account.</h4>
+        <hr />
+        <div class="main-panel" >
+            <div class="content">
+                <p class="text-info">
+                    You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
+                    Please enter an email address for this site below and click the Register button to finish
+                    logging in.
+                </p>
+                <div class="col-md-4">
+                    <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Input.Email"></label>
+                            <input asp-for="Input.Email" class="form-control" />
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </form>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+        </div>
+
+        @section Scripts {
+            <partial name="_ValidationScriptsPartial" />
+        }
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
