--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,153 +3,75 @@
 @{
     ViewData["Title"] = "Register";
 }
-
-@*<h1>@ViewData["Title"]</h1>
-
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <h4>Create a new account.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.ConfirmPassword"></label>
-                    <input asp-for="Input.ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-            </form>
-        </div>
-    </div>*@
-
-
 <!DOCTYPE html>
 <html>
-
-
-
 <head>
     <title>Register</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="/img/icons/favicon.ico" />
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
-    <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="/css/util.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <!--===============================================================================================-->
 </head>
 
+
+
 <body style="background-color: #666666;">
-
-    <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <form class="login100-form validate-form" asp-route-returnUrl="@Model.ReturnUrl" method="post" data-ajax="true" data-ajax-method="post" data-ajax-complete="completed">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <span class="login100-form-title p-b-43">
-                        Register to continue
-                    </span>
-
-                    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" asp-for="Input.Email" placeholder="Email">
-                    </div>
-
-
-                    <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" asp-for="Input.Password" placeholder="Password">
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" asp-for="Input.ConfirmPassword" placeholder="Confirm Password">
-                    </div>
-
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn" type="submit">
-                            Register
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-46 p-b-20">
-                        <span class="txt2">
-                            or sign up using
-                        </span>
-                    </div>
-
-                    <div class="login100-form-social flex-c-m">
-                        <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
-                            <i class="fa fa-facebook-f" aria-hidden="true"></i>
-                        </a>
-
-                        <a href="#" class="login100-form-social-item flex-c-m bg2 m-r-5">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </form>
-
-                <div class="login100-more" style="background-image: url('/img/bg-01.jpg');">
+<div class="limiter">
+    <div class="container-login100">
+        <div class="wrap-login100" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <form class="login100-form validate-form" asp-route-returnUrl="@Model.ReturnUrl" method="post" data-ajax="true" data-ajax-method="post" data-ajax-complete="completed">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <span class="login100-form-title p-b-43">
+                    Register to continue
+                </span>
+                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <input class="input100" asp-for="Input.Email" placeholder="Email">
                 </div>
+                <div class="wrap-input100 validate-input" data-validate="Password is required">
+                    <input class="input100" asp-for="Input.Password" placeholder="Password">
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Password is required">
+                    <input class="input100" asp-for="Input.ConfirmPassword" placeholder="Confirm Password">
+                </div>
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn" type="submit">
+                        Register
+                    </button>
+                </div>
+            </form>
+            <div class="login100-more" style="background-image: url('/img/bg-01.jpg');">
             </div>
         </div>
     </div>
+</div>
 
 
-
-
-
-    <!--===============================================================================================-->
-    <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="/vendor/animsition/js/animsition.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="/vendor/bootstrap/js/popper.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="/vendor/select2/select2.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="/vendor/daterangepicker/moment.min.js"></script>
-    <script src="/vendor/daterangepicker/daterangepicker.js"></script>
-    <!--===============================================================================================-->
-    <script src="/vendor/countdowntime/countdowntime.js"></script>
-    <!--===============================================================================================-->
-    <script src="/js/main.js"></script>
-
+<!-- #region  -->
+<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="/vendor/animsition/js/animsition.min.js"></script>
+<script src="/vendor/bootstrap/js/popper.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/vendor/select2/select2.min.js"></script>
+<script src="/vendor/daterangepicker/moment.min.js"></script>
+<script src="/vendor/daterangepicker/daterangepicker.js"></script>
+<script src="/vendor/countdowntime/countdowntime.js"></script>
+<script src="/js/main.js"></script>
+<!-- #endregion -->
 </body>
 
-
-@*@section Scripts {
-        <partial name="_ValidationScriptsPartial" />
-    }*@
-
-
 @section scripts{
-    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js">
+
+    </script>
     <script>
         completed = function (xhr) {
             alert(`Hi ${xhr.responseText}!`);
