--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/AdminSetting/AddTeacher.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/AdminSetting/AddTeacher.cshtml
@@ -9,30 +9,30 @@
 }
 <form asp-controller="AdminSetting" asp-action="AddTeacher" method="post">
     <input type="hidden" asp-for="Id" />
-    <div asp-validation-summary="All"></div>
-        <div class="form-group">
-            <label>First Name</label>
-            <textarea asp-for="FirstName" class="form-control" rows="2" required></textarea>
-        </div>
-        <div class="form-group">
-            <label>Last Name</label>
-            <textarea asp-for="LastName" class="form-control" rows="2" required></textarea>
-        </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label>First Name</label>
+        <textarea asp-for="FirstName" class="form-control" rows="2" required></textarea>
+    </div>
+    <div class="form-group">
+        <label>Last Name</label>
+        <textarea asp-for="LastName" class="form-control" rows="2" required></textarea>
+    </div>
 
-        <div class="form-group">
-            <label>Email</label>
-            <input asp-for="Email" class="form-control" rows="2" required/>
-        </div>
+    <div class="form-group">
+        <label>Email</label>
+        <input asp-for="Email" class="form-control" rows="2" required />
+    </div>
 
-        <div class="form-group">
-            <label class="col-2 col-form-label">Type Teacher</label>
-            <div class="col-10">
-                <input class="form-control" asp-for="TypeTeacher" required>
-            </div>
+    <div class="form-group">
+        <label class="col-2 col-form-label">Type Teacher</label>
+        <div class="col-10">
+            <input class="form-control" asp-for="TypeTeacher" required>
         </div>
+    </div>
 
-        <div class="form-group">
-            <input type="submit" value="Submit" class="btn btn-primary" />
-            <input type="reset" value="Reset" class="btn" />
-        </div>
+    <div class="form-group">
+        <input type="submit" value="Submit" class="btn btn-primary" />
+        <input type="reset" value="Reset" class="btn" />
+    </div>
 </form>
