--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/AdminSetting/AddUniversity.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/AdminSetting/AddUniversity.cshtml
@@ -9,7 +9,7 @@
 }
 <form asp-controller="AdminSetting" asp-action="AddUniversity" method="post">
     <input type="hidden" asp-for="Id" />
-    <div asp-validation-summary="All"></div>
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label>Name</label>
         <textarea asp-for="Name" class="form-control" rows="2" required></textarea>
