--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/EditComment.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/EditComment.cshtml
@@ -10,13 +10,14 @@
 <form asp-controller="Comment" asp-action="EditComment" method="post">
     <input type="hidden" asp-for="Id"/>
     <input type="hidden" asp-for="UserId"/>
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group shadow-textarea">
-        <textarea asp-for="Subject" class="form-control z-depth-1" id="subjectCommentUniversity" rows="2" placeholder="Write subject here..."></textarea>
+        <textarea asp-for="Subject" class="form-control z-depth-1" id="subjectCommentUniversity" rows="2" placeholder="Write subject here..." required></textarea>
     </div>
 
     <div class="form-group">
         <label for="exampleFormControlTextarea3">Comment</label>
-        <textarea asp-for="Message" class="form-control" id="messageCommentUniversity" rows="8"></textarea>
+        <textarea asp-for="Message" class="form-control" id="messageCommentUniversity" rows="8" required></textarea>
     </div>
 
     <div class="form-group">
