--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Teacher/_TeacherTableRecords.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Teacher/_TeacherTableRecords.cshtml
@@ -6,7 +6,7 @@
     <tr>
         <td>@($"{teacher.Id}")</td>
         <td>@($"{teacher.FirstName} {teacher.LastName}")</td>
-        <td>@($"{teacher.AverageMarks}")</td>
+        <td>@($"{@Math.Round(teacher.AverageMarks, 2)}")</td>
         <td>@($"{teacher.Email}")</td>
         <td>@($"{teacher.TypeTeacher}")</td>
         <td>
