--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
                     <li class="nav-item">
                         <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                            <button class="nav-link btn">Logout</button>
+                            <button class="nav-link btn">Logout Now</button>
                         </form>
                     </li>
                 }
